<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_search">

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.margretcraft.simplevocabulary.ui.searchGroup.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_book"
        android:name="com.margretcraft.simplevocabulary.ui.dashboard.DashboardFragment"
        android:label="@string/vocabulary"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_learn"
        android:name="com.margretcraft.simplevocabulary.ui.notifications.NotificationsFragment"
        android:label="@string/learn"
        tools:layout="@layout/fragment_notifications" />
</navigation>