<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".BookActivity">

    <ImageButton
        android:id="@+id/imageButtonTabBook2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:contentDescription="TODO"
        android:src="@drawable/tab_down"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/translate"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="@+id/imageButtonTabBook2"
        app:layout_constraintEnd_toEndOf="@+id/imageButtonTabBook2"
        app:layout_constraintStart_toStartOf="@+id/imageButtonTabBook2"
        app:layout_constraintTop_toTopOf="@+id/imageButtonTabBook2" />

    <ImageButton
        android:id="@+id/imageButtonTabSearch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:src="@drawable/tab_up"
        app:layout_constraintStart_toEndOf="@+id/imageButtonTabBook2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/vocabulary"
        app:layout_constraintBottom_toBottomOf="@+id/imageButtonTabSearch2"
        app:layout_constraintEnd_toEndOf="@+id/imageButtonTabSearch2"
        app:layout_constraintStart_toEndOf="@+id/imageButtonTabBook2"
        app:layout_constraintTop_toTopOf="@+id/imageButtonTabSearch2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWordold" />

    <AutoCompleteTextView
        android:id="@+id/textViewWordold"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@color/bezLight"
        android:hint="@string/search"
        android:inputType="text"
        android:padding="5dp"
        android:shadowColor="@color/colorAccent"
        android:shadowRadius="3"
        android:singleLine="true"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/gray"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonTabBook2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/fon"
        android:scaleType="fitEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/fon_med" />

</androidx.constraintlayout.widget.ConstraintLayout>